force-app/main/default/objects/NEILON__Folder__c/fields/NEILON__Active__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Bucket?</label>
    <type>Checkbox</type>
</CustomField>