force-app/main/default/objects/NEILON__Folder__c/fields/NEILON__Amazon_File_Path__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Amazon_File_Path__c</fullName>
    <description>Salesforce path for folder hierarchy.</description>
    <label>Salesforce File Path</label>
    <type>TextArea</type>
</CustomField>