force-app/main/default/objects/NEILON__Folder__c/fields/NEILON__Amazon_File_Path_With_Bucket__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Amazon_File_Path_With_Bucket__c</fullName>
    <formula>IF(ISBLANK(NEILON__Bucket_Name__c), Name, NEILON__Bucket_Name__c&amp;&quot;/&quot;) &amp; IF(ISBLANK(NEILON__Amazon_File_Path__c), &apos;&apos;, NEILON__Amazon_File_Path__c)</formula>
    <label>Salesforce File Path With Bucket</label>
    <type>Text</type>
</CustomField>