force-app/main/default/objects/NEILON__Folder__c/fields/NEILON__Asset__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asset Id to which folder will be linked.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Folders</relationshipName>
    <type>Lookup</type>
</CustomField>