force-app/main/default/objects/NEILON__Folder__c/fields/NEILON__Case__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case Id to which folder will be linked.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Folders</relationshipName>
    <type>Lookup</type>
</CustomField>