force-app/main/default/objects/NEILON__Folder__c/fields/NEILON__Category__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Whitepapers</fullName>
            </value>
            <value>
                <fullName>Data Sheet</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>