force-app/main/default/objects/NEILON__Folder__c/fields/NEILON__Contract__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contract Id to which folder will be linked.</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Folders</relationshipName>
    <type>Lookup</type>
</CustomField>