force-app/main/default/objects/NEILON__Folder__c/fields/NEILON__Default__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True, folder will be used as defalt bucket.</description>
    <inlineHelpText>If true, folder will be used as defalt bucket.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>