force-app/main/default/objects/NEILON__Folder__c/fields/NEILON__External_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>NEILON__External_Parent_Id__c</fullName>
    <description>Id of the external parent record (If folder is created for any external object record).</description>
    <inlineHelpText>Id of the external parent record (If folder is created for any external object record).</inlineHelpText>
    <label>External Parent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>