force-app/main/default/objects/NEILON__Folder__c/fields/NEILON__File_Versioning__c.field-meta.xml
<CustomField>
    <fullName>NEILON__File_Versioning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, users can upload new versions for files.</description>
    <inlineHelpText>If true, users can upload new versions for files.</inlineHelpText>
    <label>File Versioning?</label>
    <type>Checkbox</type>
</CustomField>