force-app/main/default/objects/NEILON__Folder__c/fields/NEILON__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Id to which folder will be linked.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Folders</relationshipName>
    <type>Lookup</type>
</CustomField>