force-app/main/default/objects/NEILON__Folder__c/fields/NEILON__Product2__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Id to which folder will be linked.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Folders</relationshipName>
    <type>Lookup</type>
</CustomField>