force-app/main/default/objects/NEILON__Folder__c/validationRules/NEILON__Bucket_Name_Change_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NEILON__Bucket_Name_Change_Validation</fullName>
    <active>true</active>
    <description>You cannot change name of bucket. You have to create new bucket from System Configuration page. Contact your System Admin.</description>
    <errorConditionFormula>AND( ISCHANGED( Name ) , ISBLANK( NEILON__Bucket_Name__c) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You cannot change name of bucket. You have to create new bucket from System Configration page. Contact your System Admin.</errorMessage>
</ValidationRule>