force-app/main/default/objects/NEILON__Folder__c/validationRules/NEILON__Folder_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NEILON__Folder_Name_Validation</fullName>
    <active>true</active>
    <description>The folder name cannot contain special characters  &quot;/&quot; and &quot;?&quot;.</description>
    <errorConditionFormula>OR(CONTAINS( Name , &quot;/&quot;), CONTAINS( Name , &quot;?&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The folder name cannot contain special characters  &quot;/&quot; and &quot;?&quot;.</errorMessage>
</ValidationRule>